# wireless-charging-table

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  Control.cpp  Control.h  README.md  Vision.cpp  Vision.h  device_manager.cpp  device_manager.h  main.cpp
control/: control.cpp  control.h
include/: Camera.h  ChargerManager.h  Common.h  Control.h  DeviceManager.h  GPIOManager.h  GrabberController.h  Vision.h
lib/: CMakeLists.txt
model/V1.0/: 41ME3991AL .stp  A Drive Frame-23^A Drive Frame_A Drive_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  A Drive Frame-24^A Drive Frame_A Drive_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  ALP2020_300.SLDPRT  ALP2020_330.SLDPRT  ALP2020_420.SLDPRT  ALP2020_460.SLDPRT  B Drive Frame (1)^B Drive_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  Belt Clamp_1-34^Belt Clamp_1_X Carriage Frame_X Carriage_X Axis_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  Belt1-5.sldprt  Belt2-4.sldprt  BottomAcrylicPanel.sldprt  BottomCorner.sldprt  Button M3x8.SLDPRT  CameraMount.SLDPRT  CoilBase.SLDPRT  D20L25 Jaw Coupler v5.SLDASM  D20L25 Jaw Coupler v5.step  F695 ZZ (1)^Idler Assembly (1)_1_XY Joint - Right_X Axis_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  FootCorner.SLDPRT  Front Idler A Bottom (1)^Front Idler A_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  Front Idler A Top^Front Idler A_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  Front Idler B Bottom^Front Idler B_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  Front Idler B Top^Front Idler B_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  GT2 20T 6mm^B Drive_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  GT2 20T Idler Gates v2^XY Joint - Right_X Axis_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  GlassSheet3mm.SLDPRT  GlassSheet5mm.SLDPRT  GlassSheetHolderCorner.SLDPRT  GlassSheetHolderCorner2.SLDPRT  GlassSheetHolderSide.SLDPRT  Green End Cap.SLDPRT  IEC320-C14.SLDASM  M5 1mm Spacer (1)^Idler Assembly (1)_1_XY Joint - Right_X Axis_Gantry_VORON2 v2.4 Assembly - Final(2)_VORON2 v2.4 Assembly - Final.SLDPRT  MGN12AssemXaxis.SLDASM  MGN9-120.SLDASM  MGN9-120.SLDPRT  MGN9-390.SLDASM  MGN9-H.SLDPRT  MGN9.SLDPRT  (+24 more)
src/: ChargerManager.cpp  Control.cpp  DeviceManager.cpp  GPIOManager.cpp  GrabberController.cpp  ParameterTuning.cpp  Vision.cpp  main.cpp
tests/: ChargerManagerUnitTest.cpp  GPIOUnitTest.cpp  GrabberUnitTest.cpp  ParameterTuning.cpp  VisionUnitTest.cpp  imageCalibration.cpp
vision/: detect.cpp
